--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
